# cpp-calculator

./: .gitignore  README.md
calculator-cli/: .gitignore  CMakeLists.txt
calculator-cli/src/: lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
calculator-ui/: index.html  package-lock.json  package.json
calculator-ui/src/: main.ts  styles.css
calculator-ui/src-tauri/: Cargo.toml  tauri.conf.json
calculator-ui/src-tauri/src/: lib.rs  main.rs
